building third page

--- a/src/index.html
+++ b/src/index.html
@@ -46,11 +46,11 @@
               <ul class="flex text-white text-base font-light">
                 <li class="mr-8 text-base">
                   <a class="text-base" href="#">
-                    <span class="font-bold">Home</span>
+                    <span class="font-semibold">Home</span>
                   </a>
                 </li>
                 <li class="mr-8">
-                  <a href="#">
+                  <a href="./usecases.html">
                     <span>Use Cases</span>
                   </a>
                 </li>
@@ -58,7 +58,7 @@
                   <a href="#"><span>Demo</span></a>
                 </li>
                 <li class="mr-8">
-                  <a href="./usecases.html"><span>Datasets</span></a>
+                  <a href="./datasets.html"><span>Datasets</span></a>
                 </li>
                 <li>
                   <a href="#"><span>Contact Us</span></a>
