responsive for third page is done

--- a/src/datasets.html
+++ b/src/datasets.html
@@ -65,11 +65,12 @@
       <div class="flex justify-between">
         <form class="flex items-center bg-gray-300" action="#">
           <input
-            class="bg-gray-300 w-40 sm:w-80 outline-none"
+            class="text-sm bg-gray-300 w-40 sm:w-80 outline-none pl-2"
             type="search"
             id="search"
+            placeholder="Search for datasets"
           />
-          <button class="p-2 bg-gray-400">
+          <button class="p-2 bg-gray-300 border-l border-gray-400">
             <svg
               class="h-5"
               xmlns="http://www.w3.org/2000/svg"
