adding img and adjusting padding

--- a/src/index.html
+++ b/src/index.html
@@ -55,20 +55,20 @@
                   </a>
                 </li>
                 <li class="mr-8">
-                  <a href="#"><span>Demo</span></a>
+                  <a href="#demo"><span>Demo</span></a>
                 </li>
                 <li class="mr-8">
                   <a href="./datasets.html"><span>Datasets</span></a>
                 </li>
                 <li>
-                  <a href="#"><span>Contact Us</span></a>
+                  <a href="#contact"><span>Contact Us</span></a>
                 </li>
               </ul>
             </div>
           </div>
         </nav>
         <!--nav end-->
-        <div class="text-center px-6 mx-auto mt-14">
+        <div class="text-center px-5 mx-auto mt-14">
           <h1 class="text-4xl font-bold">Building a Swahili NLP hub</h1>
           <p class="mx-auto mt-8 text-xl lg:w-1/2 md:w-11/12">
             A Swahili NLP hub for everyone - That is developers, data scientists
@@ -92,7 +92,7 @@
 
       <main class="lg:pt-36 md:pt-0 sm:pt-14">
         <!--section one start-->
-        <section class="mx-10 sm:mx-16 md:pt-72">
+        <section class="mx-5 sm:mx-16 md:pt-72">
           <div class="grid md:grid-cols-2 gap-10 sm:grid-cols-1 sm:gap-10">
             <div class="pt-12">
               <img class="w-full" src="./img/Capture1.PNG" alt="" />
@@ -126,8 +126,8 @@
         </section>
         <!--section one end-->
         <!--section two start-->
-        <section class="mx-8 sm:mx-16 py-32">
-          <div class="text-center lg:w-3/4 mx-auto">
+        <section class="mx-5 sm:mx-16 py-32">
+          <div class="text-center mx-auto">
             <h1 class="text-2xl font-bold mb-4">Problems we are solving</h1>
             <p class="mb-6 text-xl">
               The Swahili NLP problems we work on are hard, and we want as many
@@ -137,7 +137,7 @@
           </div>
           <div class="grid md:grid-cols-2 gap-4 mb-4">
             <div
-              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded flex-col"
+              class="flex md:flex-row gap-4 border border-gray-400 p-4 rounded-lg sm:rounded flex-col"
             >
               <div>
                 <img
@@ -159,7 +159,7 @@
               </div>
             </div>
             <div
-              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded flex-col"
+              class="flex md:flex-row gap-4 border border-gray-400 p-4 rounded-lg sm:rounded flex-col"
             >
               <div>
                 <img
@@ -181,7 +181,7 @@
               </div>
             </div>
             <div
-              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded flex-col"
+              class="flex md:flex-row gap-4 border border-gray-400 p-4 rounded-lg sm:rounded flex-col"
             >
               <div>
                 <img
@@ -206,7 +206,7 @@
               </div>
             </div>
             <div
-              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded flex-col"
+              class="flex md:flex-row gap-4 border border-gray-400 p-4 rounded-lg sm:rounded flex-col"
             >
               <div>
                 <img
@@ -231,7 +231,7 @@
               </div>
             </div>
             <div
-              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded flex-col"
+              class="flex md:flex-row gap-4 border border-gray-400 p-4 rounded-lg sm:rounded flex-col"
             >
               <div class="">
                 <img
@@ -257,7 +257,8 @@
         <!--section two end-->
         <!--section three start-->
         <section
-          class="px-8 sm:px-16 py-32 grid md:grid-cols-2 items-center lg:gap-4 gap-10 bg-gray-50"
+          id="demo"
+          class="px-5 sm:px-16 py-32 grid md:grid-cols-2 items-center lg:gap-4 gap-10 bg-gray-50"
         >
           <div class="">
             <h2 class="text-lg uppercase text-green-800 mb-2">Demos</h2>
@@ -330,7 +331,7 @@
         <!--section three end-->
         <!--section four start-->
         <section
-          class="mx-8 sm:mx-16 grid md:grid-cols-2 items-center py-32 gap-10"
+          class="mx-5 sm:mx-16 grid md:grid-cols-2 items-center py-32 gap-10"
         >
           <div>
             <img class="" src="./img/Macbook.png" alt="" />
@@ -373,11 +374,11 @@
         </section>
         <!--section four end-->
         <!--section five start-->
-        <section class="px-8 sm:px-16 py-32 bg-gray-50">
+        <section class="px-6 sm:px-16 py-32 bg-gray-50">
           <h1 class="text-2xl font-bold mb-8 text-center">
             Frequently Asked Questions
           </h1>
-          <div class="grid md:grid-cols-2 gap-4 px-8 text-base">
+          <div class="grid md:grid-cols-2 gap-4 px-0 sm:px-8 text-base">
             <div
               class="bg-white rounded flex items-center justify-between px-2 py-4"
             >
@@ -535,7 +536,8 @@
         <!--section five end-->
         <!--section six start-->
         <section
-          class="mx-8 sm:mx-16 grid md:grid-cols-2 grid-cols-1 lg:gap-4 py-20 gap-10"
+          id="contact"
+          class="mx-5 sm:mx-16 grid md:grid-cols-2 grid-cols-1 lg:gap-4 py-20 gap-10"
         >
           <div>
             <img src="./img/illustration.png" alt="" />
@@ -615,7 +617,7 @@
         <!--section six end-->
         <!--section footer start-->
         <footer
-          class="mx-8 sm:mx-16 flex md:justify-between md:flex-row flex-col gap-10 border-t border-gray-300 py-10"
+          class="mx-5 sm:mx-16 flex md:justify-between md:flex-row flex-col gap-10 border-t border-gray-300 py-10"
         >
           <div class="flex flex-col gap-4">
             <div class="flex items-center">
