--- a/src/usecases.html
+++ b/src/usecases.html
@@ -47,7 +47,7 @@
               </a>
             </li>
             <li class="mr-8">
-              <a href="#"><span>Demo</span></a>
+              <a href="#demo"><span>Demo</span></a>
             </li>
             <li class="mr-8">
               <a href="./datasets.html"><span>Datasets</span></a>
@@ -80,7 +80,7 @@
           <h1 class="text-2xl font-bold">Swahili-tweet-sentiment</h1>
           <div class="flex items-center pb-4 pt-4 border-b border-gray-200">
             <div class="flex items-center">
-              <img class="w-5 h-5 rounded-full" src="" alt="" />
+              <img class="w-5 h-5 rounded-full" src="./img/nat-9.jpg" alt="" />
               <p class="flex text-xs">
                 <span class="text-orange-400 ml-2">by:</span>
                 <span
